frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.card-shadow {
    box-shadow: 0 0 10px 1px rgb(178, 178, 178);
}

.card-shadow:hover {
    box-shadow: 0 0 20px 2px rgb(178, 178, 178);
    transition: all 200ms;
}

.card-shadow-static {
    box-shadow: 0 0 10px 1px rgb(178, 178, 178);
}

.image-shadow {
    box-shadow: 0 0 5px 1px rgb(106, 106, 106);
}

blockquote {
    margin-left: 20px;
    padding-left: 15px;
    border-left: 3px solid #646464;
}

body {
    transform: scale(0.8);
    transform-origin: top left;
    width: 125%;
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

